--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+Flask = "2.0.1"
+tensorflow = "2.10.0"
 
 [dev-packages]
 
 [requires]
 python_version = "3.8"
-python_full_version = "3.8.3"
+#python_full_version = "3.8.3"
